[project]
name = "vsengine"
version = "0.2.0+jet"
license = { file = "COPYING" }
readme = "README.md"
authors = [
    { name = "cid-chan", email ="cid+git@cid-chan.moe" }
]
dynamic = ["description"]
requires-python = ">=3.10"

dependencies = [
    "vapoursynth>=72"
]

[project.optional-dependencies]
trio = [
    "trio"
]
test = [
    "pytest"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
